--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -1,2 +1,53 @@
-h1
-  color: green
+$eggeplomme: rgb(255,165,30) // Eggeplomme
+$Mork-aubergine: rgb(65,55,70) // Mørk aubergine
+$aubergine: rgb(130,85,195) // Aubergine
+$frost: rgb(210,235,250) // Frost
+$Bringeber: rgb(235,85,75) // Bringebær
+$sort-aubergine: rgb(45,40,50) // Sort aubergine
+$Varmgra: rgb(215,215,210) // Varmgrå
+$Lys-varmgra: rgb(240,240,236) // Lys varmgrå
+$white: rgb(255,255,255) // White
+
+@font-face
+  font-family: 'GT Walsheim Regular', sans-serif
+  src: url('../fonts/GT-Walsheim-Regular.ttf')
+
+body, html
+  font-family: 'GT Walsheim Regular', sans-serif
+  margin: 0
+  padding: 0
+
+footer
+  background: $Mork-aubergine
+  color: $Varmgra
+  position: fixed
+  bottom: 0
+  width: 100%
+  ul
+    list-style-type: none
+    padding: 0
+    margin: 0
+    box-shadow: 0 2px 4px $Varmgra, 0 -2px 4px $Varmgra
+  li
+    display: inline-block
+    width: 19.5%
+    text-align: center
+    padding: 10px 0
+  li:hover
+    background: $Varmgra
+    color: $Mork-aubergine
+    a
+      cursor: pointer
+      transition: 200ms
+
+  .handlekurv-menu
+    background: $Varmgra
+    width: 100%
+    position: relative
+    p
+      display: inline-block
+      padding: 0
+      margin: 0
+      color: $sort-aubergine
+    .handlekurv-name
+    .handlekurv-price
