--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,2 +1,42 @@
-h1 {
-  color: green; }
+@font-face {
+  font-family: 'GT Walsheim Regular', sans-serif;
+  src: url("../fonts/GT-Walsheim-Regular.ttf"); }
+
+body, html {
+  font-family: 'GT Walsheim Regular', sans-serif;
+  margin: 0;
+  padding: 0; }
+
+footer {
+  background: #413746;
+  color: #d7d7d2;
+  position: fixed;
+  bottom: 0;
+  width: 100%; }
+  footer ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    -webkit-box-shadow: 0 2px 4px #d7d7d2, 0 -2px 4px #d7d7d2;
+            box-shadow: 0 2px 4px #d7d7d2, 0 -2px 4px #d7d7d2; }
+  footer li {
+    display: inline-block;
+    width: 19.5%;
+    text-align: center;
+    padding: 10px 0; }
+  footer li:hover {
+    background: #d7d7d2;
+    color: #413746; }
+    footer li:hover a {
+      cursor: pointer;
+      -webkit-transition: 200ms;
+      transition: 200ms; }
+  footer .handlekurv-menu {
+    background: #d7d7d2;
+    width: 100%;
+    position: relative; }
+    footer .handlekurv-menu p {
+      display: inline-block;
+      padding: 0;
+      margin: 0;
+      color: #2d2832; }
