--- a/public/css/main.css
+++ b/public/css/main.css
@@ -13,30 +13,43 @@ footer {
   position: fixed;
   bottom: 0;
   width: 100%; }
+  footer a {
+    cursor: pointer;
+    -webkit-transition: 200ms;
+    transition: 200ms; }
   footer ul {
     list-style-type: none;
     padding: 0;
     margin: 0;
-    -webkit-box-shadow: 0 2px 4px #d7d7d2, 0 -2px 4px #d7d7d2;
-            box-shadow: 0 2px 4px #d7d7d2, 0 -2px 4px #d7d7d2; }
+    height: 40px;
+    -webkit-box-shadow: 0 15px 75px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 15px 75px rgba(0, 0, 0, 0.2); }
   footer li {
     display: inline-block;
-    width: 19.5%;
     text-align: center;
-    padding: 10px 0; }
+    padding: 10px 0;
+    width: calc(20% - 3.6px); }
   footer li:hover {
     background: #d7d7d2;
     color: #413746; }
-    footer li:hover a {
-      cursor: pointer;
-      -webkit-transition: 200ms;
-      transition: 200ms; }
+  footer .handlekurv-menu *, footer .handlekurv-menu {
+    position: absolute; }
   footer .handlekurv-menu {
+    -webkit-box-shadow: 0 15px 75px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 15px 75px rgba(0, 0, 0, 0.2);
     background: #d7d7d2;
     width: 100%;
-    position: relative; }
+    bottom: 40px;
+    height: 30px;
+    line-height: 30px; }
+    footer .handlekurv-menu .handlekurv-name {
+      left: 0; }
+    footer .handlekurv-menu .handlekurv-price {
+      right: 0; }
     footer .handlekurv-menu p {
       display: inline-block;
+      width: 20%;
+      text-align: center;
       padding: 0;
       margin: 0;
       color: #2d2832; }
