--- a/views/partials/Footer.hbs
+++ b/views/partials/Footer.hbs
@@ -1,13 +1,24 @@
 <footer>
   <div class='handlekurv-menu'>
-    <p class='handlekurv-name'>Handlekurv</p><p class='handlekurv-price'>399,-</p>
+    <p class='handlekurv-name'>Handlekurven er tom</p>
+    <p class='handlekurv-price'>399,-</p>
   </div>
 
   <ul>
-    <a><li>Aktuellt</li></a>
-    <a><li>Varor</li></a>
-    <a><li>Planlegger</li></a>
-    <a><li>Oppskrifter</li></a>
-    <a><li>Profil</li></a>
+    <a>
+      <li>Aktuellt</li>
+    </a>
+    <a>
+      <li>Varor</li>
+    </a>
+    <a>
+      <li>Planlegger</li>
+    </a>
+    <a>
+      <li>Oppskrifter</li>
+    </a>
+    <a>
+      <li>Profil</li>
+    </a>
   </ul>
 </footer>
