--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>{{title}}</title>
+    <link rel="stylesheet" href="/css/sanitize.css">
     <link rel="stylesheet" href="/css/main.css">
   </head>
   <body>
