--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -52,3 +52,17 @@ footer
       padding: 0
       margin: 0
       color: $sort-aubergine
+
+.grid-large
+  width: 100%
+  display: grid
+  grid-template-columns: repeat(2, 1fr)
+  grid-gap: 5px
+
+  .full-width
+    position: relative
+    grid-column: 1/3
+
+  .half-width
+    position: relative
+    grid-column: span 1
