--- a/public/css/main.css
+++ b/public/css/main.css
@@ -53,3 +53,15 @@ footer {
       padding: 0;
       margin: 0;
       color: #2d2832; }
+
+.grid-large {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 5px; }
+  .grid-large .full-width {
+    position: relative;
+    grid-column: 1/3; }
+  .grid-large .half-width {
+    position: relative;
+    grid-column: span 1; }
