--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,21 @@
 {{#> layout }}
 
-  
+  <div class="grid-large">
+
+    <div class="inspiration full-width">
+      <h3>Handle til jula?</h3>
+      <img src="imgs/inspiration/xmas.png" alt="Julevarer">
+    </div>
+
+    <div class="inspiration half-width">
+      <h3>Something here</h3>
+    </div>
+
+    <div class="inspiration half-width">
+      <h3>And here</h3>
+    </div>
+
+  </div>
 
   {{> Footer}}
 {{/layout}}
