--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -12,39 +12,51 @@ body, html
 footer
   background: $Mork-aubergine
   color: $Varmgra
+  font-size: 1.5em
   position: fixed
   bottom: 0
   width: 100%
+  height: 9%
+
   a
     cursor: pointer
-    transition: 200ms
+
   ul
     list-style-type: none
     padding: 0
     margin: 0
-    height: 40px
+    height: 70%
     box-shadow: 0 15px 75px rgba(0,0,0,0.2)
-  li
-    display: inline-block
-    text-align: center
-    padding: 10px 0
-    width: calc(20% - 3.6px)
-  li:hover
-    background: $Varmgra
-    color: $Mork-aubergine
+    position: relative
+    bottom: 0
+
+    li
+      display: inline-block
+      text-align: center
+      padding: 10px 0
+      width: calc(20% - 3.6px)
+
+      &:hover
+        background: $Varmgra
+        color: $Mork-aubergine
+
   .handlekurv-menu *, .handlekurv-menu
-    position: absolute
+    position: relative
+
   .handlekurv-menu
     box-shadow: 0 15px 75px rgba(0,0,0,0.2)
     background: $Varmgra
     width: 100%
-    bottom: 40px
-    height: 30px
-    line-height: 30px
+    top: 0
+    height: 30%
+    line-height: 150%
+
     .handlekurv-name
       left: 0
+
     .handlekurv-price
       right: 0
+
     p
       display: inline-block
       width: 20%
