--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -10,7 +10,7 @@ body, html
   padding: 0
 
 footer
-  background: $Mork-aubergine
+  background: #555
   color: $Varmgra
   font-size: 1.5em
   position: fixed
@@ -21,8 +21,9 @@ footer
   a
     cursor: pointer
 
-  ul
-    list-style-type: none
+  .nav-menu
+    display: flex
+    justify-content: space-between
     padding: 0
     margin: 0
     height: 70%
@@ -30,31 +31,36 @@ footer
     position: relative
     bottom: 0
 
-    li
-      display: inline-block
+    a
+      display: block
+      background: $Mork-aubergine
       text-align: center
-      padding: 10px 0
-      width: calc(20% - 3.6px)
+      font-size: 1.5em
+      line-height: 300%
+      height: 100%
+      width: 19.5%
 
       &:hover
         background: $Varmgra
         color: $Mork-aubergine
 
   .handlekurv-menu *, .handlekurv-menu
-    position: relative
 
   .handlekurv-menu
+    position: relative
     box-shadow: 0 15px 75px rgba(0,0,0,0.2)
     background: $Varmgra
     width: 100%
     top: 0
     height: 30%
-    line-height: 150%
+    line-height: 200%
 
     .handlekurv-name
+      position: absolute
       left: 0
 
     .handlekurv-price
+      position: absolute
       right: 0
 
     p
