added image for inpiration block

--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -61,13 +61,15 @@ footer
 
     .handlekurv-price
       position: absolute
+      text-align: right
+      padding: 0 10px
+      width: 20%
       right: 0
 
     p
       display: inline-block
-      width: 20%
-      text-align: center
-      padding: 0
+      width: 80%
+      padding: 0 10px
       margin: 0
       color: $sort-aubergine
 
