--- a/_sass/home.sass
+++ b/_sass/home.sass
@@ -1,11 +1,20 @@
+@import "./imports/colors.sass"
+
 .inspiration
+  display: flex
+  justify-content: center
+  align-items: center
   text-align: center
   height: 400px
+  overflow: hidden
   background: #fafafa
 
   h3
-    text-align:center
+    color: $Varmgra
+    text-align: center
     font-size: 3rem
+    position: relative
 
   img
     position: absolute
+    filter: blur(3px) brightness(40%)
