--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,8 +1,23 @@
 .inspiration {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-align: center;
   height: 400px;
+  overflow: hidden;
   background: #fafafa; }
   .inspiration h3 {
-    font-size: 3rem; }
+    color: #d7d7d2;
+    text-align: center;
+    font-size: 3rem;
+    position: relative; }
   .inspiration img {
-    position: absolute; }
+    position: absolute;
+    -webkit-filter: blur(3px) brightness(40%);
+            filter: blur(3px) brightness(40%); }
