--- a/public/css/main.css
+++ b/public/css/main.css
@@ -56,12 +56,14 @@ footer {
       left: 0; }
     footer .handlekurv-menu .handlekurv-price {
       position: absolute;
+      text-align: right;
+      padding: 0 10px;
+      width: 20%;
       right: 0; }
     footer .handlekurv-menu p {
       display: inline-block;
-      width: 20%;
-      text-align: center;
-      padding: 0;
+      width: 80%;
+      padding: 0 10px;
       margin: 0;
       color: #2d2832; }
 
