--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,24 +1,20 @@
 {{#> layout }}
 
-<<<<<<< HEAD
   <div class="grid-large">
 
     <div class="inspiration full-width">
+      <img src="imgs/inspiration/xmas.jpg" alt="Julevarer"/>
       <h3>Handle til jula?</h3>
-      <img src="imgs/inspiration/xmas.png" alt="Julevarer">
     </div>
 
     <div class="inspiration half-width">
-      <h3>Something here</h3>
+      <h3>Noe annet her</h3>
     </div>
 
     <div class="inspiration half-width">
-      <h3>And here</h3>
+      <h3>Og noe mer her</h3>
     </div>
 
   </div>
-=======
->>>>>>> origin/footer
-
 
 {{/layout}}
