--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,7 +2,7 @@
 
   <div class="grid-large">
 
-    <div class="inspiration full-width">
+    <div class="inspiration hero full-width">
       <img src="imgs/inspiration/xmas.jpg" alt="Julevarer"/>
       <h3>Handle til jula?</h3>
     </div>
