--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -5,7 +5,7 @@
     <title>{{title}}</title>
     <link rel="stylesheet" href="/css/sanitize.css">
     <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/css/home.css">
+    {{{_sections.head}}}
   </head>
   <body>
     {{{page.title}}}
