--- a/views/calender.hbs
+++ b/views/calender.hbs
@@ -1,44 +1,138 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Calender</title>
+<title>Calendar</title>
 
 <style>
 
 ul {
   list-style-type: none;
-  font-size: 2em;
+  font-size: 3em;
 }
 
 p {
-  font-size: 2em;
+
 }
 
+.calendar-text{
+  margin-top: 10%;
+  width: 100%;
+  text-align: center;
 
+}
+#calendar-title{
+  font-size: 2.5em;
+  color: rgb(255,192,0);
+}
+
+#calendar-info{
+  font-size: 2.2em;
+  margin-top: 20%;
+}
+
+.month{
+  text-align: center;
+  margin-top: 10%;
+  color: grey;
+}
+
+.pointer{
+  color: rgb(255,192,0);
+  font-size: 1.7em;
+  margin-top: 8%;
+}
+
+#previous-pointer{
+  margin-left: 25%;
+  padding-left: 10%;
+  float: left;
+}
+#next-pointer{
+  margin-right: 25%;
+  padding-right: 10%;
+  float: right;
+}
+
+#this-date{
+  font-size: 2.7em;
+  color: black;
+}
+
+.cal{
+  width: 100%;
+  padding: 5%;
+}
+
+.weeks{
+  width: 12.5%;
+  text-align: center;
+  float: left;
+}
+
+#week-name{
+  width: 100%;
+  padding: 0%;
+}
+.weeks li{
+  color: rgb(255,192,0);
+  display: inline-block;
+  width: 100%;
+  padding: 31%;
+}
+
+.weekdays{
+  margin-left: 12.5%;
+  background-color: yellow;
+  text-align: center;
+  width: 87.5%;
+}
+
+.weekdays li{
+  float: left;
+  padding-right: 3%;
+  width: 14.2%;
+  display: inline-block;
+
+}
+
+.date{
+  text-align: center;
+  margin-left: 12.5%;
+  background-color: yellow;
+}
+
+.date li{
+  float: left;
+  padding: 3%;
+  width: 14.2%;
+  display: inline-block;
+}
 
 </style>
 
 </head>
 <body>
 
-<p name ="cal-title ">Planleggeren</p>
-<p>Velg en dag eller uke å planlegge handelen på</p>
-
+<div class="calendar-text">
+  <p id="calendar-title">Planleggeren</p>
+  <p id="calendar-info">Velg en dag eller uke å planlegge handelen på</p>
+</div>
 
 <div class = "month">
   <ul>
-    <li class = "next-pointer">&#10095;</li>
-    <li class = "previous-pointer">&#10094;</li>
-    <li>2017</li>
-    <li>1</li>
-    <li>DESEMBER</li>
+    <li class = "pointer" id="next-pointer">&#10095;</li>
+    <li class = "pointer" id="previous-pointer">&#10094;</li>
+    <li id="this-year">2017</li>
+    <li id="this-date">1</li>
+    <li id="this-month">DESEMBER</li>
   </ul>
 </div>
 
 <div class = "cal">
   <ul class = "weeks">
-    <li>Uke</li>
+    <li id="week-name">Uke</li>
     <li>48</li>
+    <li>49</li>
     <li>50</li>
     <li>51</li>
     <li>52</li>
