--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -5,8 +5,10 @@
     <title>{{title}}</title>
     <link rel="stylesheet" href="/css/sanitize.css">
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/week.css">
   </head>
   <body>
     {{{body}}}
+    <script src="js/app.js" type="text/javascript"></script>
   </body>
 </html>
