--- a/views/calender.hbs
+++ b/views/calender.hbs
@@ -7,7 +7,7 @@
 
 ul {
   list-style-type: none;
-  font-size: 3em;
+  font-size: 3vh;
 }
 
 p {
@@ -21,12 +21,12 @@ p {
 
 }
 #calendar-title{
-  font-size: 2.5em;
+  font-size: 2.5vh;
   color: rgb(255,192,0);
 }
 
 #calendar-info{
-  font-size: 2.2em;
+  font-size: 2.2vh;
   margin-top: 20%;
 }
 
@@ -38,8 +38,8 @@ p {
 
 .pointer{
   color: rgb(255,192,0);
-  font-size: 1.7em;
-  margin-top: 8%;
+  font-size: 4vh;
+  margin-top: 10%;
 }
 
 #previous-pointer{
@@ -54,7 +54,7 @@ p {
 }
 
 #this-date{
-  font-size: 2.7em;
+  font-size: 8vh;
   color: black;
 }
 
