delt opp i flere div-er i tittel

--- a/views/calender.hbs
+++ b/views/calender.hbs
@@ -113,9 +113,12 @@ p {
 </head>
 <body>
 
+<div class="calendar-title">
+  <p id="title">Planleggeren</p>
+</div>
+
 <div class="calendar-text">
-  <p id="calendar-title">Planleggeren</p>
-  <p id="calendar-info">Velg en dag eller uke å planlegge handelen på</p>
+    <p id="text">Velg en dag eller uke å planlegge handelen på</p>
 </div>
 
 <div class = "month">
