--- a/views/calender.hbs
+++ b/views/calender.hbs
@@ -113,52 +113,54 @@ p {
 </head>
 <body>
 
-<div class="calendar-title">
-  <p id="title">Planleggeren</p>
-</div>
+<div class="container">
+    <div class="calendar-title">
+      <p id="title">Planleggeren</p>
+    </div>
 
-<div class="calendar-text">
-    <p id="text">Velg en dag eller uke å planlegge handelen på</p>
-</div>
+    <div class="calendar-text">
+        <p id="text">Velg en dag eller uke å planlegge handelen på</p>
+    </div>
 
-<div class = "month">
-  <ul>
-    <li class = "pointer" id="next-pointer">&#10095;</li>
-    <li class = "pointer" id="previous-pointer">&#10094;</li>
-    <li id="this-year">2017</li>
-    <li id="this-date">1</li>
-    <li id="this-month">DESEMBER</li>
-  </ul>
-</div>
+    <div class = "month">
+      <ul>
+          <li class = "pointer" id="previous-pointer">&#10094;</li>
+          <li class = "pointer" id="next-pointer">&#10095;</li>
+          <li id="this-year">2017</li>
+          <li id="this-date">1</li>
+          <li id="this-month">DESEMBER</li>
+      </ul>
+    </div>
 
-<div class = "cal">
-  <ul class = "weeks">
-    <li id="week-name">Uke</li>
-    <li>48</li>
-    <li>49</li>
-    <li>50</li>
-    <li>51</li>
-    <li>52</li>
-  </ul>
+    <div class = "cal">
+      <ul class = "weeks">
+        <li id="week-name">Uke</li>
+        <li>48</li>
+        <li>49</li>
+        <li>50</li>
+        <li>51</li>
+        <li>52</li>
+      </ul>
 
-  <ul class = "weekdays">
-    <li>Man</li>
-    <li>Tir</li>
-    <li>Ons</li>
-    <li>Tor</li>
-    <li>Fre</li>
-    <li>Lør</li>
-    <li>Søn</li>
-  </ul>
+      <ul class = "weekdays">
+        <li>Man</li>
+        <li>Tir</li>
+        <li>Ons</li>
+        <li>Tor</li>
+        <li>Fre</li>
+        <li>Lør</li>
+        <li>Søn</li>
+      </ul>
 
-  <ul class = "date">
-    {{#_for 27 31 1}}
-      <li class="inactive">{{this}}</li>
-    {{/_for}}
-    {{#_for 1 32 1}}
-      <li class="active">{{this}}</li>
-    {{/_for}}
-  </ul>
+      <ul class = "date">
+        {{#_for 27 31 1}}
+          <li class="inactive">{{this}}</li>
+        {{/_for}}
+        {{#_for 1 32 1}}
+          <li class="active">{{this}}</li>
+        {{/_for}}
+      </ul>
+    </div>
 </div>
 
 </body>
