--- a/views/checkout.hbs
+++ b/views/checkout.hbs
@@ -6,12 +6,16 @@
 
   {{#progress 2 3 'chechout-prog'}}{{/progress}}
 
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
+ <div id="wrapper">
+  <div id="kort" class="boks">Kort</div>
+  <div id="kortnummber"class="boks">kortnummber</div>
+  <div id="kortinnhaver"class="boks">kortinnhaver</div>
+  <div id="utlopsdato"class="boks">utløpsdato</div>
+  <div id="total"class="boks">total</div>
 
-  <input >
+ <div id="betaling">
+  <input id="betaling-btn" type="button" value="Betaling">
+</div>
+</div>
 
 {{/layout}}
