--- a/views/calender.hbs
+++ b/views/calender.hbs
@@ -3,7 +3,7 @@
 {{/section}}
 
 {{#> layout }}
-
+<div class="container">
   <div class="calendar-title">
     <p id="title">Planleggeren</p>
   </div>
@@ -51,5 +51,5 @@
       {{/_for}}
     </ul>
   </div>
-
+</div>
 {{/layout}}
