--- a/public/css/calendar.css
+++ b/public/css/calendar.css
@@ -4,11 +4,12 @@
 
 .container{
   font-family: 'GT Walsheim Regular', sans-serif;
+  color: grey;
 }
 
  ul {
   list-style-type: none;
-  font-size: 3vh;
+  font-size: 2.5vh;
 }
 
 .calendar-text{
@@ -75,8 +76,8 @@
 }
 
 .weekdays{
+  color: black;
   margin-left: 12.5%;
-  background-color: yellow;
   text-align: center;
   width: 87.5%;
 }
@@ -100,4 +101,8 @@
   padding: 3%;
   width: 14.2%;
   display: inline-block;
+}
+
+.inactive{
+  color: lightgrey;
 }
