--- a/views/calender.hbs
+++ b/views/calender.hbs
@@ -10,6 +10,7 @@
 
   <div class="calendar-text">
       <p id="text">Velg en dag eller uke å planlegge handelen på</p>
+      <div id="grey-line"></div>
   </div>
 
   <div class = "month">
