--- a/views/checkout.hbs
+++ b/views/checkout.hbs
@@ -7,11 +7,12 @@
   {{#progress 2 3 'chechout-prog'}}{{/progress}}
 
  <div id="wrapper">
-  <div id="kort" class="boks">Kort</div>
-  <div id="kortnummber"class="boks">kortnummber</div>
-  <div id="kortinnhaver"class="boks">kortinnhaver</div>
-  <div id="utlopsdato"class="boks">utløpsdato</div>
-  <div id="total"class="boks">total</div>
+  <div id="Oversikt">Handlekurv Betal På vei</div>
+  <div id="Kort" class="boks">Kort: Visa</div>
+  <div id="Kortnummber"class="boks">kortnummer: 1234 5457 8943 1290</div>
+  <div id="Kortinnhaver"class="boks">kortinnhavers navn: Mikkel Jensen</div>
+  <div id="Utlopsdato"class="boks">utløpsdato: 01/19 CVC: 898</div>
+  <div id="Total"class="boks">total: 36,00kr</div>
 
  <div id="betaling">
   <input id="betaling-btn" type="button" value="Betaling">
