--- a/public/css/checkout.css
+++ b/public/css/checkout.css
@@ -5,15 +5,20 @@
   transform: translateX(-50%);
 }
 
+#Oversikt{
+  margin-top: 100px;
+  font-size: 30px;
+  padding:30px;
+}
+
 #wrapper{
-  margin-top:300px;
+  margin-top:200px;
+  font-size: 25px;
 }
 
 .boks{
-  padding: 40px;
-  border: 1px solid #C0C0C0;
-  font-size: 40px;
-  margin-top: 20px;
+  height: 100%;
+  width: 100%;
 }
 
 #total{
@@ -31,4 +36,20 @@
   margin-left: 390px;
   border: 0;
 
+}
+.info-line{
+  display: flex;
+  height: 110px;
+  padding: 20px;
+  line-height: 150%;
+  margin: 10px 20px;
+  border: 2px solid #111;
+  font-size: 40px;
+}
+
+.style{
+  display: block;
+  height: 100%;
+  width: 50%;
+  text-align: right;
 }
