--- a/views/checkout.hbs
+++ b/views/checkout.hbs
@@ -6,13 +6,16 @@
 
   {{#progress 2 3 'chechout-prog'}}{{/progress}}
 
+<div id="wrap">
+<div id="Oversikt">Handlekurv Betal På vei</div>
+</div>
+
  <div id="wrapper">
-  <div id="Oversikt">Handlekurv Betal På vei</div>
-  <div id="Kort" class="boks">Kort: Visa</div>
-  <div id="Kortnummber"class="boks">kortnummer: 1234 5457 8943 1290</div>
-  <div id="Kortinnhaver"class="boks">kortinnhavers navn: Mikkel Jensen</div>
-  <div id="Utlopsdato"class="boks">utløpsdato: 01/19 CVC: 898</div>
-  <div id="Total"class="boks">total: 36,00kr</div>
+  <div class="info-line"><div id="Kort" class="boks">Kort: Visa</div></div>
+  <div class="info-line"><div id="Kortnummber"class="boks">kortnummer: 1234 5457 8943 1290</div></div>
+  <div class="info-line"><div id="Kortinnhaver"class="boks">kortinnhavers navn: Mikkel Jensen</div></div>
+  <div class="info-line"><div id="Utlopsdato"class="boks">utløpsdato: 01/19 </div><div class="style">CVC: 898</div></div>
+  <div class="info-line"><div id="Total"class="boks">total:></div><div class="style">36,00kr</div></div>
 
  <div id="betaling">
   <input id="betaling-btn" type="button" value="Betaling">
