lagt til symbol for settings

--- a/views/calender.hbs
+++ b/views/calender.hbs
@@ -6,11 +6,16 @@
 <div class="container">
   <div class="calendar-title">
     <p id="title">Planleggeren</p>
+    <div class="settings">&#9881;</div>
+
   </div>
+
+
 
   <div class="calendar-text">
       <p id="text">Velg en dag eller uke å planlegge handelen på</p>
       <div id="grey-line"></div>
+
   </div>
 
   <div class = "month">
