--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -8,6 +8,7 @@ body, html
   font-family: 'GT Walsheim Regular', sans-serif
   margin: 0
   padding: 0
+  background: $white
 
 footer
   background: #555
