--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,7 +5,8 @@
 body, html {
   font-family: 'GT Walsheim Regular', sans-serif;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  background: white; }
 
 footer {
   background: #555;
