--- a/public/css/checkout.css
+++ b/public/css/checkout.css
@@ -31,9 +31,10 @@
   font-family: sans-serif;
   background: #ffa51e;
   color: #FFFFFF;
+  width: 40%;
   border-radius:90px;
   margin-top: 100px;
-  margin-left: 390px;
+  margin-left: 300px;
   border: 0;
 
 }
