--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,9 +1,23 @@
 @font-face {
-  font-family: 'GT Walsheim Regular', sans-serif;
-  src: url("../fonts/GT-Walsheim-Regular.ttf"); }
+  font-family: 'GT Walsheim Regular';
+  src: url("../fonts/GT-Walsheim-Regular.ttf");
+  font-weight: 400;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'GT Walsheim Bold';
+  src: url("../fonts/GT-Walsheim-Bold.ttf");
+  font-weight: 900;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'GT Walsheim Medium';
+  src: url("../fonts/GT-Walsheim-Medium.ttf");
+  font-weight: 700;
+  font-style: normal; }
 
 body, html {
-  font-family: 'GT Walsheim Regular', sans-serif;
+  font-family: 'GT Walsheim Medium';
   margin: 0;
   padding: 0; }
 
