--- a/views/calendar_v2.hbs
+++ b/views/calendar_v2.hbs
@@ -3,18 +3,28 @@
 {{/section}}
 
 {{#> layout }}
+
+<div class="side-overlay">
+  hello
+</div>
+
 <div class="container">
   <div class="calendar-title">
     <p id="title">Planleggeren</p>
-    <div class="settings">&#9881;</div>
   </div>
 
-
+  <div class="burger">
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
 
   <div class="calendar-text">
     <p id="text">Velg en dag eller uke å planlegge handelen på</p>
     <div id="grey-divne"></div>
   </div>
+
+  <hr>
 
   <div class = "month">
     <div id="this-year">2017</div>
