--- a/_sass/calendar_v2.sass
+++ b/_sass/calendar_v2.sass
@@ -1,15 +1,49 @@
 @import "./imports/colors.sass"
 
-ul
-  list-style-type: none
-  font-size: 2.2vh
+.side-overlay
+  position: fixed
+  height: 100%
+  width: 40%
+  background: red
+  top: 0
+  right: -40%
+  z-index: 1000
+  transition: right 500ms ease-in-out
+
+  &.show
+    right: 0
+
+.container
+  &.overlay
+    filter: blur(3px) brightness(90%)
+
+.burger
+  height: 50px
+  width: 70px
+  display: flex
+  flex-direction: column
+  justify-content: space-around
+  position: absolute
+  top: 60px
+  right: 60px
+  font-size: 1em
+  color: $sort-aubergine
+
+  div
+    width: 100%
+    height: 7px
+    background: $sort-aubergine
+    border-radius: 3px
+
+hr
+  width: 70%
 
 .calendar-title
   text-align: center
-  font-size: 2.1vh
+  font-size: 2.2em
   color: rgb(255, 192, 0)
-  margin-top: 9%
-  font-weight: 500
+  margin-top: 7%
+  font-weight: 600
 
 .calendar-text
   width: 100%
@@ -34,14 +68,15 @@ ul
 .pointer
   color: rgb(255, 192, 0)
   font-size: 3.5em
-  margin: 0 1.5em
+  margin: 0 1em
 
 #this-year, #this-month
   font-size: 2.2em
+  color: $Varmgra
 
 #this-date
   font-size: 5.5em
-  color: black
+  color: $sort-aubergine
   padding: 1.5%
 
 .cal
@@ -72,7 +107,7 @@ ul
     grid-area: weekdays
     display: flex
     justify-content: space-around
-    color: $eggeplomme
+    color: $sort-aubergine
     font-size: 2.5rem
 
   .date
@@ -80,6 +115,7 @@ ul
     display: grid
     grid-template-columns: repeat(7, 1fr)
     grid-template-rows: repeat(5, 1fr)
+    color: $sort-aubergine
 
     div
       height: 2em
