--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -6,9 +6,13 @@
     <link rel="stylesheet" href="/css/sanitize.css">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/week.css">
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.min.js"
+      integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+      crossorigin="anonymous"></script>
+    {{{_sections.head}}}
   </head>
   <body>
     {{{body}}}
-    <script src="js/app.js" type="text/javascript"></script>
   </body>
 </html>
