--- a/views/uke.hbs
+++ b/views/uke.hbs
@@ -1,3 +1,7 @@
+{{#section 'head'}}
+  <script src="js/app.js" type="text/javascript"></script>
+{{/section}}
+
 {{#> layout }}
   <div class="week-grid">
     <div class="week-header">
