--- a/views/uke.hbs
+++ b/views/uke.hbs
@@ -1,5 +1,6 @@
 {{#section 'head'}}
   <script src="js/app.js" type="text/javascript"></script>
+  <link rel="stylesheet" href="/css/week.css">
 {{/section}}
 
 {{#> layout }}
