--- a/views/checkout.hbs
+++ b/views/checkout.hbs
@@ -19,11 +19,11 @@
 </div>
 
  <div id="wrapper">
-  <div class="info-line"><div id="kort" class="boks">Kort: <span style="color:#A9A9A9">Visa</span></div></div>
-  <div class="info-line"><div id="kortnummber"class="boks">Kortnummer: <span style="color:#A9A9A9">1234 5457 8943 1290</span></div></div>
-  <div class="info-line"><div id="kortinnhaver"class="boks">Kortinnhavers navn: <span style="color:#A9A9A9">Mikkel Jensen</span></div></div>
-  <div class="info-line"><div id="utlopsdato"class="boks">Utløpsdato: <span style="color:#A9A9A9">01/19</span> </div><div class="style-textColor">CVC: <span style="color:#A9A9A9">898</span></div></div>
-  <div class="info-line"><div id="Total"class="boks">Total:</div><div class="style-textColor">36,00kr</div></div>
+  <div class="info-line"><div id="kort" class="section-line">Kort: <span style="color:#A9A9A9">Visa</span></div></div>
+  <div class="info-line"><div id="kortnummber"class="section-line">Kortnummer: <span style="color:#A9A9A9">1234 5457 8943 1290</span></div></div>
+  <div class="info-line"><div id="kortinnhaver"class="section-line">Kortinnhavers navn: <span style="color:#A9A9A9">Mikkel Jensen</span></div></div>
+  <div class="info-line"><div id="utlopsdato"class="section-line">Utløpsdato: <span style="color:#A9A9A9">01/19</span> </div><div class="style-textColor">CVC: <span style="color:#A9A9A9">898</span></div></div>
+  <div class="info-line"><div id="Total"class="section-line">Total:</div><div class="style-textColor">36,00kr</div></div>
 
  <div id="betaling">
   <input id="betaling-btn" type="button" value="Betaling">
