--- a/views/calendar_v2.hbs
+++ b/views/calendar_v2.hbs
@@ -1,22 +1,31 @@
 {{#section 'head'}}
   <link rel="stylesheet" href="/css/calendar_v2.css">
+  <script src="js/calendar.js"></script>
 {{/section}}
 
 {{#> layout }}
 
 <div class="side-overlay">
-  hello
+
+  <div class="shoppinglist-box">
+    <div>
+      <div class="list-date">22.12.17</div>
+      <div class="list-name">Julie 5 år!</div>
+      <div class="list-cost">240kr</div>
+    </div>
+    <img src="imgs/kid.jpg" alt="Søt unge">
+  </div>
+</div>
+
+<div class="burger">
+  <div></div>
+  <div></div>
+  <div></div>
 </div>
 
 <div class="container">
   <div class="calendar-title">
     <p id="title">Planleggeren</p>
-  </div>
-
-  <div class="burger">
-    <div></div>
-    <div></div>
-    <div></div>
   </div>
 
   <div class="calendar-text">
