--- a/_sass/calendar_v2.sass
+++ b/_sass/calendar_v2.sass
@@ -3,19 +3,46 @@
 .side-overlay
   position: fixed
   height: 100%
-  width: 40%
-  background: red
+  width: 59%
+  background: $white
   top: 0
-  right: -40%
+  right: -59%
   z-index: 1000
   transition: right 500ms ease-in-out
 
   &.show
     right: 0
 
+  .shoppinglist-box
+    display: flex
+    justify-content: space-between
+    margin: 150px auto
+    align-items: center
+    width: 90%
+    height: 190px
+    background-color: $Lys-varmgra
+    border-radius: 20px
+    font-size: 1.7em
+    color: $Varmgra
+
+    div
+      margin-left: 12px
+
+    img
+      height: 125px
+      width: 125px
+      margin-right: 40px
+      border-radius: 50%
+
+    .list-name
+      color: $sort-aubergine
+      font-size: 2.3rem
+      margin: 10px 12px
+
+
 .container
   &.overlay
-    filter: blur(3px) brightness(90%)
+    filter: blur(3px)
 
 .burger
   height: 50px
@@ -28,12 +55,23 @@
   right: 60px
   font-size: 1em
   color: $sort-aubergine
+  z-index: 2000
 
   div
     width: 100%
     height: 7px
     background: $sort-aubergine
     border-radius: 3px
+    transition: 300ms ease-in-out
+
+  &.close
+    div:nth-child(2)
+      opacity: 0
+
+    div:nth-child(1)
+      transform: translateY(16.5px) rotate(40deg)
+    div:nth-child(3)
+      transform: translateY(-16.5px) rotate(-40deg)
 
 hr
   width: 70%
