replaced calander v2 with original

--- a/views/calendar.hbs
+++ b/views/calendar.hbs
@@ -1,5 +1,5 @@
 {{#section 'head'}}
-  <link rel="stylesheet" href="/css/calendar_v2.css">
+  <link rel="stylesheet" href="/css/calendar.css">
   <script src="js/calendar.js"></script>
 {{/section}}
 
