--- a/public/css/calendar.css
+++ b/public/css/calendar.css
@@ -1,135 +1,181 @@
-@font-face {
-  font-family: 'GT Walsheim Regular', sans-serif;
-  src: url("../fonts/GT-Walsheim-Regular.ttf"); }
-
-.container{
-  font-family: 'GT Walsheim Regular', sans-serif;
-  color: grey;
+.side-overlay {
+  position: fixed;
   height: 100%;
-}
+  width: 59%;
+  background: white;
+  top: 0;
+  right: -59%;
+  z-index: 1000;
+  -webkit-transition: right 500ms ease-in-out;
+  transition: right 500ms ease-in-out; }
+  .side-overlay.show {
+    right: 0; }
+  .side-overlay .shoppinglist-box {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    margin: 150px auto;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 90%;
+    height: 190px;
+    background-color: #f0f0ec;
+    border-radius: 20px;
+    font-size: 1.7em;
+    color: #d7d7d2; }
+    .side-overlay .shoppinglist-box div {
+      margin-left: 12px; }
+    .side-overlay .shoppinglist-box img {
+      height: 125px;
+      width: 125px;
+      margin-right: 40px;
+      border-radius: 50%; }
+    .side-overlay .shoppinglist-box .list-name {
+      color: #2d2832;
+      font-size: 2.3rem;
+      margin: 10px 12px; }
 
- ul {
-  list-style-type: none;
-  font-size: 2.2vh;
-}
+.container.overlay {
+  -webkit-filter: blur(3px);
+          filter: blur(3px); }
 
-.calendar-title{
+.burger {
+  height: 50px;
+  width: 70px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  position: absolute;
+  top: 60px;
+  right: 60px;
+  font-size: 1em;
+  color: #2d2832;
+  z-index: 2000; }
+  .burger div {
+    width: 100%;
+    height: 7px;
+    background: #2d2832;
+    border-radius: 3px;
+    -webkit-transition: 300ms ease-in-out;
+    transition: 300ms ease-in-out; }
+  .burger.close div:nth-child(2) {
+    opacity: 0; }
+  .burger.close div:nth-child(1) {
+    -webkit-transform: translateY(16.5px) rotate(40deg);
+            transform: translateY(16.5px) rotate(40deg); }
+  .burger.close div:nth-child(3) {
+    -webkit-transform: translateY(-16.5px) rotate(-40deg);
+            transform: translateY(-16.5px) rotate(-40deg); }
+
+hr {
+  width: 70%; }
+
+.calendar-title {
   text-align: center;
-  font-size: 2.1vh;
-  color: rgb(255,192,0);
-  margin-top: 9%;
-  font-weight: 500;
-}
+  font-size: 2.2em;
+  color: #ffc000;
+  margin-top: 7%;
+  font-weight: 600; }
 
-.calendar-text{
+.calendar-text {
   width: 100%;
   text-align: center;
   font-size: 2vh;
   margin-top: 17%;
-  font-weight: bold;
-}
+  font-weight: bold; }
 
-.month{
+.month {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   text-align: center;
-  margin-top: 8%;
-  color: grey;
-}
+  margin: 40px 0; }
 
-.pointer{
-  color: rgb(255,192,0);
-  font-size: 3.5vh;
-  margin-top: 7.5%;
-}
+.navigator {
+  margin: 10px 0;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
 
-#this-year{
-  font-size: 2vh;
-}
+.pointer {
+  color: #ffc000;
+  font-size: 3.5em;
+  margin: 0 1em; }
 
-#this-month{
-  font-size: 2vh;
-}
+#this-year, #this-month {
+  font-size: 2.2em;
+  color: #d7d7d2; }
 
-#previous-pointer{
-  margin-left: 27%;
-  padding-left: 10%;
-  float: left;
-}
-#next-pointer{
-  margin-right: 27%;
-  padding-right: 10%;
-  float: right;
-}
+#this-date {
+  font-size: 5.5em;
+  color: #2d2832;
+  padding: 1.5%; }
 
-#this-date{
-  font-size: 5.5vh;
-  color: black;
-  padding: 1.5%;
-}
-
-.cal{
-  margin: auto;
+.cal {
+  display: grid;
+  grid-template-areas: "corner weekdays" "weeks  month";
+  grid-template-rows: 1fr 7fr;
+  grid-template-columns: 1fr 5fr;
+  margin: 100px auto;
   width: 90%;
   height: 80%;
-  border: 2px solid green;
-}
-
-.weeks{
-  width: 12.5%;
-  text-align: center;
-  float: left;
-  font-size: 2vh;
-}
-
-#week-name{
-  width: 100%;
-  padding: 0%;
-  font-size: 2vh;
-}
-.weeks li{
-  color: rgb(255,192,0);
-  display: inline-block;
-  width: 100%;
-  padding: 30%;
-  font-size: 2.2vh;
-  border: 2px solid red;
-}
-
-.weekdays{
-  color: black;
-  margin-left: 12.5%;
-  text-align: center;
-  width: 87.5%;
-  font-size: 2vh;
-  font-weight: 500;
-}
-
-.weekdays li{
-  float: left;
-  padding-right: 3%;
-  width: 14.2%;
-  display: inline-block;
-  border: 2px solid red;
-}
-
-.date{
-  text-align: center;
-  margin-left: 12.5%;
-}
-
-.date li{
-  float: left;
-  padding: 3%;
-  width: 14.2%;
-  display: inline-block;
-  border: 2px solid red;
-}
-
-.inactive{
-  color: lightgrey;
-}
-
-#grey-line{
-  margin: auto;
-  width: 70%;
-  border-bottom: 2px solid lightgrey;
-}
+  font-size: 3em;
+  text-align: center; }
+  .cal .week-label {
+    grid-area: corner;
+    color: #ffa51e;
+    font-size: 2.5rem; }
+  .cal .weeks {
+    grid-area: weeks;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    color: #ffa51e;
+    font-size: 2.5rem; }
+  .cal .weekdays {
+    grid-area: weekdays;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    color: #2d2832;
+    font-size: 2.5rem; }
+  .cal .date {
+    grid-area: month;
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    color: #2d2832; }
+    .cal .date div {
+      height: 2em;
+      line-height: 2em; }
+      .cal .date div.inactive {
+        color: #d7d7d2; }
