--- a/public/css/main.css
+++ b/public/css/main.css
@@ -78,3 +78,14 @@ footer {
   .grid-large .half-width {
     position: relative;
     grid-column: span 1; }
+
+.planner-grid {
+  display: grid;
+  font-size: 2vh;
+  text-align: center; }
+  .planner-grid .planner-header {
+    display: inline-grid;
+    grid-row: 1;
+    grid-template-columns: 1fr 3fr 1fr; }
+    .planner-grid .planner-header h1 {
+      margin: .5em 0 .25em; }
