--- a/views/uke.hbs
+++ b/views/uke.hbs
@@ -4,12 +4,8 @@
 {{/section}}
 
 {{#> layout }}
-  <div class="week-grid">
-    <div class="week-header">
-      <h1><</h1>
-      <h1 class="font-yellow">Planlegger</h1>
-      <h1>&#9881;</h1>
-    </div>
+
+{{> headerplanner}}
 
     <div class="week-view-container">
       <div class="week-view-header">
