--- a/views/week.hbs
+++ b/views/week.hbs
@@ -1,5 +1,5 @@
 {{#section 'head'}}
-  <script src="js/app.js" type="text/javascript"></script>
+  <script src="js/week.js" type="text/javascript"></script>
   <link rel="stylesheet" href="/css/week.css">
 {{/section}}
 
