small fixes and adde dlinks in footer

--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -35,6 +35,12 @@ footer
 
   a
     cursor: pointer
+    color: $Varmgra
+    text-decoration: none
+
+    &:visited
+      color: $Varmgra
+      text-decoration: none
 
   .nav-menu
     display: flex
