--- a/views/partials/Footer.hbs
+++ b/views/partials/Footer.hbs
@@ -5,9 +5,9 @@
   </div>
 
   <div class="nav-menu">
-    <a>Aktuellt</a>
+    <a href="/">Aktuellt</a>
     <a>Varer</a>
-    <a>Planlegger</a>
+    <a href="/kalender">Planlegger</a>
     <a>Oppskrifter</a>
     <a>Profil</a>
   </div>
