--- a/public/css/main.css
+++ b/public/css/main.css
@@ -31,7 +31,12 @@ footer {
   width: 100%;
   height: 9%; }
   footer a {
-    cursor: pointer; }
+    cursor: pointer;
+    color: #d7d7d2;
+    text-decoration: none; }
+    footer a:visited {
+      color: #d7d7d2;
+      text-decoration: none; }
   footer .nav-menu {
     display: -webkit-box;
     display: -ms-flexbox;
