--- a/views/calendar.hbs
+++ b/views/calendar.hbs
@@ -5,15 +5,17 @@
 
 {{#> layout }}
 
+<div class="shadow"></div>
 <div class="side-overlay">
-
   <div class="shoppinglist-box">
-    <div>
+    <div class="list-info">
       <div class="list-date">22.12.17</div>
       <div class="list-name">Julie 5 år!</div>
       <div class="list-cost">240kr</div>
     </div>
-    <img src="imgs/kid.jpg" alt="Søt unge">
+    <div class="image-container">
+      <img src="imgs/kid.jpg" alt="Søt unge">
+    </div>
   </div>
 </div>
 
