text color in shoppinglist-box

--- a/_sass/calendar.sass
+++ b/_sass/calendar.sass
@@ -38,7 +38,7 @@
     background-color: $Lys-varmgra
     border-radius: 20px
     font-size: 1.7em
-    color: $Varmgra
+    color: darken($Varmgra, 13%)
 
     .list-info
       margin-left: 12px
