--- a/public/css/calendar.css
+++ b/public/css/calendar.css
@@ -41,7 +41,7 @@
     background-color: #f0f0ec;
     border-radius: 20px;
     font-size: 1.7em;
-    color: #d7d7d2; }
+    color: #b8b8af; }
     .side-overlay .shoppinglist-box .list-info {
       margin-left: 12px; }
     .side-overlay .shoppinglist-box .list-name {
