--- a/public/css/calendar.css
+++ b/public/css/calendar.css
@@ -8,7 +8,8 @@
   opacity: 0;
   z-index: 999;
   -webkit-transition: 300ms ease-in-out;
-  transition: 300ms ease-in-out; }
+  transition: 300ms ease-in-out;
+  pointer-events: none; }
   .shadow.show {
     opacity: 0.05; }
 
