Some small style changes

--- a/_sass/selector_group.sass
+++ b/_sass/selector_group.sass
@@ -4,6 +4,9 @@
   position: absolute
   visibility: hidden
   display: none
+  user-select: none
+  outline: none
+  -webkit-tap-highlight-color: rgba(0,0,0,0)
 
   &:checked + label
     color: $white
